# Dessulfuracao-Multithread

./: AlarmDisplayThread.cpp  AlarmDisplayThread.h  AlarmPLCThread.cpp  AlarmPLCThread.h  BufferCircular.cpp  BufferCircular.h  CMakeLists.txt  CMakeProject4.cpp  CMakeProject4.h  ConsoleManager.cpp  ConsoleManager.h  DataRetrievalThread.cpp  DataRetrievalThread.h  EventController.cpp  EventController.h  KeyboardReadThread.cpp  KeyboardReadThread.h  MessageGenerator.cpp  MessageGenerator.h  MessageProcessing.cpp  MessageProcessing.h  MessageUtilityFunctions.cpp  MessageUtilityFunctions.h  PLCProcessThread.cpp  PLCProcessThread.h  ProcessDataDisplayThread.cpp  ProcessDataDisplayThread.h  README.md  TP_Refatorado.cpp  TP_Refatorado.sln  TP_Refatorado.vcxproj  TP_Refatorado.vcxproj.filters  ThreadStructures.h  readme.md
